# Onboard-SDK

sample/linux/: CMakeLists.txt
sample/linux/common/: UserConfig.txt  dji_linux_environment.cpp  dji_linux_environment.hpp
sample/linux/flight-control/: flight_control_sample.cpp  flight_control_sample.hpp
sample/linux/mission-control/: CMakeLists.txt  mission_control.cpp  mission_control.hpp
